# nba-cli

./: .gitignore  README.md
.github/workflows/: release-binaries.yml  update-homebrew-tap.yml
cli/: README.md  cli.py  go.mod  main.go  pyproject.toml  utils.py
cli/endpoints/: __init__.py  game.py  team.py
mcp/: README.md  pyproject.toml  server.py
mcp/endpoints/: __init__.py  darko.py  game.py  lineup.py  player.py
nba/: nba.py  pyproject.toml  server.py
skill/: SKILL.md
