[project]
name = "nba-mcp-server"
version = "0.1.0"
description = "MCP server that wraps the NBA API for player, team, game, and lineup statistics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "nba-api>=1.8.0",
]

[project.scripts]
nba-mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["endpoints"]
include = ["server.py", "utils.py"]
